--- a/FantasticFour_main_v3.fxml
+++ b/FantasticFour_main_v3.fxml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <VBox prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuBar VBox.vgrow="NEVER">
+      <MenuBar onMouseClicked="#FantasticFour_main_v3">
          <menus>
             <Menu mnemonicParsing="false" text="Game">
                <items>
@@ -90,17 +89,12 @@
                   <Font name="Arial Bold" size="18.0" />
                </font>
             </Text>
-            <TextField layoutX="689.0" layoutY="415.0" prefHeight="26.0" prefWidth="74.0" />
+            <TextField layoutX="672.0" layoutY="415.0" prefHeight="26.0" prefWidth="74.0" />
             <Text fill="WHITE" layoutX="581.0" layoutY="484.0" strokeType="OUTSIDE" strokeWidth="0.0" text="your Turn ">
                <font>
                   <Font name="Arial Bold" size="18.0" />
                </font>
             </Text>
-            <Avatar layoutX="718.0" layoutY="470.0" radius="12.0" style="-fx-background-color: #cad40f;">
-               <image>
-                  <Image url="@dot_blue.png" />
-               </image>
-            </Avatar>
             <Pane layoutX="580.0" layoutY="120.0" prefHeight="107.0" prefWidth="183.0" style="-fx-background-color: #a2dbde; -fx-border-color: #a32727;">
                <children>
                   <Text fill="#0d7075" layoutX="29.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score :">
@@ -113,12 +107,6 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Text>
-                  <Avatar layoutX="124.0" layoutY="14.0" radius="12.0" style="-fx-background-color: #cad40f;">
-                     <image>
-                        <Image url="@dot_yellow.png" />
-                     </image>
-                  </Avatar>
-                  <TextField layoutX="106.0" layoutY="61.0" prefHeight="26.0" prefWidth="74.0" />
                   <Pane layoutY="128.0" prefHeight="107.0" prefWidth="183.0" style="-fx-background-color: #a2dbde; -fx-border-color: #a32727;">
                      <children>
                         <Text fill="#0d7075" layoutX="29.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score :">
@@ -131,16 +119,15 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Text>
-                        <Avatar layoutX="124.0" layoutY="14.0" radius="12.0" style="-fx-background-color: #c40c0c;">
-                           <image>
-                              <Image url="@dot_red.png" />
-                           </image>
-                        </Avatar>
                         <TextField layoutX="92.0" layoutY="61.0" prefHeight="26.0" prefWidth="74.0" />
+                        <Circle fill="#ff2121" layoutX="142.0" layoutY="28.0" radius="12.0" stroke="WHITE" strokeMiterLimit="5.0" strokeType="INSIDE" strokeWidth="3.0" />
                      </children>
                   </Pane>
+                  <Circle fill="#e8ff1f" layoutX="139.0" layoutY="25.0" radius="12.0" stroke="WHITE" strokeMiterLimit="5.0" strokeType="INSIDE" strokeWidth="3.0" />
+                  <TextField layoutX="97.0" layoutY="64.0" prefHeight="26.0" prefWidth="74.0" />
                </children>
             </Pane>
+            <Circle fill="#e8ff1f" layoutX="714.0" layoutY="478.0" radius="12.0" stroke="WHITE" strokeMiterLimit="5.0" strokeType="INSIDE" strokeWidth="3.0" />
          </children>
       </AnchorPane>
    </children>
